# oslo-policy-j2y-convertor

./: AUTHORS  README.md  README.rst  requirements.txt  setup.cfg
oslo_policy_j2y_convertor/: j2y_convertor.py
