[metadata]
name = oslo-policy-j2y-convertor 
summary = Oslo Policy File convertor from Json format to Yaml
description-file =
    README.rst
author = Ghanshyam Mann
author-email = gmann@ghanshyammann.com
home-page = https://github.com/gmannos/oslo-policy-j2y-convertor/blob/master/README.rst
python-requires = >=3.6

[files]
packages =
    oslo_policy_j2y_convertor

[entry_points]
console_scripts =
    oslopolicy-j2y-convertor = oslo_policy_j2y_convertor.j2y_convertor:convert_policy_json_to_yaml
